--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Created by http://www.gitignore.io
+
+### Java ###
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +13,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+/target/
+/FrogChatEncryption/target/
+/FrogChatCore/target/
+/FrogChatGui/target/
+/FrogChatGuiFx/target/
