--- a/FrogChatEncryption/pom.xml
+++ b/FrogChatEncryption/pom.xml
@@ -15,6 +15,10 @@
             <artifactId>bcpg-jdk16</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-ext-jdk16</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
